// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CAlert renders correctly 1`] = `
<div
  aria-atomic="true"
  aria-live="polite"
  class="alert alert-dismissible alert-info"
  role="alert"
>
  <button
    aria-label="Close"
    class="close"
    type="button"
  >
    ×
  </button>
  Dismissible Alert!
</div>
`;

exports[`CAlert renders correctly 2`] = `
<div
  aria-atomic="true"
  aria-live="polite"
  class="alert alert-dismissible alert-success"
  role="alert"
>
  <button
    aria-label="Close"
    class="close"
    type="button"
  >
    ×
  </button>
  Dismissible Alert!
</div>
`;
